近义词完善

--- a/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_同近义词过滤0.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_同近义词过滤0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "355aaf6837ff94a4",
    "metadata": {
     "ExecuteTime": {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "38978ba3390d198d",
    "metadata": {
     "ExecuteTime": {
@@ -66,7 +66,7 @@
        "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,20 +97,25 @@
     "                            \"西红柿 , 黄瓜, 香蕉 => 水果, 蔬菜\"\n",
     "                        ],\n",
     "                        # 同义词配置文件(容器内elasticsearch config目录中,即xxx/elasticsearch/config/synonyms/synonym0.txt)\n",
-    "                        # \"synonyms_path\": \"synonyms/synonym0.txt\",  # 与上等价\n",
-    "                        \"updateable\": True\n",
+    "                        \n",
+    "                        # You can use the reload search analyzers API to pick up changes to synonym files used in the synonym_graph or synonym token filter of a search analyzer. \n",
+    "                        # To be eligible, the token filter must have an updateable flag of true and only be used in search analyzers.\n",
+    "                        # 参考:setting参数_同近义词过滤_search_analyzer_demo.ipynb\n",
+    "                        \"updateable\": True  # 索引时使用同义词不能指定updatealbe为True,仅用于搜索时使用同义词\n",
     "                    }\n",
     "                }\n",
     "            }\n",
     "    }\n",
     "}\n",
     "\n",
+    "if es.indices.exists('es0'):\n",
+    "    es.indices.delete('es0')\n",
     "es.indices.create('es0', body=body)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "e9a21b82a28d94d6",
    "metadata": {
     "ExecuteTime": {
@@ -126,7 +131,8 @@
      "text": [
       "{'tokens': [{'token': '我', 'start_offset': 0, 'end_offset': 1, 'type': 'CN_CHAR', 'position': 0}, {'token': '爱', 'start_offset': 1, 'end_offset': 2, 'type': 'CN_CHAR', 'position': 1}, {'token': '妈妈', 'start_offset': 2, 'end_offset': 4, 'type': 'CN_WORD', 'position': 2}, {'token': '母亲', 'start_offset': 2, 'end_offset': 4, 'type': 'SYNONYM', 'position': 2}, {'token': 'mother', 'start_offset': 2, 'end_offset': 4, 'type': 'SYNONYM', 'position': 2}]}\n",
       "\n",
-      "{'tokens': [{'token': '我', 'start_offset': 0, 'end_offset': 1, 'type': 'CN_CHAR', 'position': 0}, {'token': '爱', 'start_offset': 1, 'end_offset': 2, 'type': 'CN_CHAR', 'position': 1}, {'token': 'mother', 'start_offset': 2, 'end_offset': 8, 'type': 'ENGLISH', 'position': 2}, {'token': '母亲', 'start_offset': 2, 'end_offset': 8, 'type': 'SYNONYM', 'position': 2}, {'token': '妈妈', 'start_offset': 2, 'end_offset': 8, 'type': 'SYNONYM', 'position': 2}]}\n"
+      "{'tokens': [{'token': '我', 'start_offset': 0, 'end_offset': 1, 'type': 'CN_CHAR', 'position': 0}, {'token': '爱', 'start_offset': 1, 'end_offset': 2, 'type': 'CN_CHAR', 'position': 1}, {'token': 'mother', 'start_offset': 2, 'end_offset': 8, 'type': 'ENGLISH', 'position': 2}, {'token': '母亲', 'start_offset': 2, 'end_offset': 8, 'type': 'SYNONYM', 'position': 2}, {'token': '妈妈', 'start_offset': 2, 'end_offset': 8, 'type': 'SYNONYM', 'position': 2}]}\n",
+      "\n"
      ]
     }
    ],
@@ -143,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "4606ef66af15ef9b",
    "metadata": {
     "ExecuteTime": {
@@ -163,7 +169,8 @@
       "\n",
       "{'tokens': [{'token': '我', 'start_offset': 0, 'end_offset': 1, 'type': 'CN_CHAR', 'position': 0}, {'token': '喜欢', 'start_offset': 1, 'end_offset': 3, 'type': 'CN_WORD', 'position': 1}, {'token': '水果', 'start_offset': 3, 'end_offset': 6, 'type': 'SYNONYM', 'position': 2}, {'token': '蔬菜', 'start_offset': 3, 'end_offset': 6, 'type': 'SYNONYM', 'position': 2}]}\n",
       "\n",
-      "{'tokens': [{'token': '我', 'start_offset': 0, 'end_offset': 1, 'type': 'CN_CHAR', 'position': 0}, {'token': '喜欢', 'start_offset': 1, 'end_offset': 3, 'type': 'CN_WORD', 'position': 1}, {'token': '水果', 'start_offset': 3, 'end_offset': 5, 'type': 'CN_WORD', 'position': 2}]}\n"
+      "{'tokens': [{'token': '我', 'start_offset': 0, 'end_offset': 1, 'type': 'CN_CHAR', 'position': 0}, {'token': '喜欢', 'start_offset': 1, 'end_offset': 3, 'type': 'CN_WORD', 'position': 1}, {'token': '水果', 'start_offset': 3, 'end_offset': 5, 'type': 'CN_WORD', 'position': 2}]}\n",
+      "\n"
      ]
     }
    ],
@@ -183,33 +190,6 @@
     "print(es.indices.analyze(index=\"es0\", body={\n",
     "    \"analyzer\": \"synonym_analyzer\",\n",
     "    \"text\": \"我喜欢水果\"}), end='\\n\\n')  # 西红柿,黄瓜,香蕉不被查询"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "62c3427948e3d8f2",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-19T03:28:18.397221700Z",
-     "start_time": "2023-12-19T03:28:18.336489300Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'acknowledged': True}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "es.indices.delete('es0')"
    ]
   }
  ],
