--- a/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_同近义词过滤_search_analyzer_demo.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_同近义词过滤_search_analyzer_demo.ipynb
@@ -2,13 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "initial_id",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-19T06:43:57.762654Z",
-     "start_time": "2023-12-19T06:43:57.586543Z"
-    },
     "collapsed": true
    },
    "outputs": [],
@@ -20,15 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "36d2a61e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-19T06:43:58.056882200Z",
-     "start_time": "2023-12-19T06:43:57.763677300Z"
-    },
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "id": "2f10671c",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -36,7 +26,7 @@
        "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +85,8 @@
     "        \"properties\": {\n",
     "            \"information\": {\n",
     "                \"type\": \"text\",\n",
-    "                \"analyzer\": \"analyzer_index\"\n",
+    "                \"analyzer\": \"analyzer_index\",\n",
+    "                \"search_analyzer\": \"analyzer_search\"   # ★★★★★仅会作用于full_text_queries\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -108,8 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9523dd41",
+   "execution_count": 6,
+   "id": "595ee6ed",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +116,7 @@
        " '_primary_term': 1}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7b1f3aa1",
+   "execution_count": 7,
+   "id": "52bb08c0",
    "metadata": {},
    "outputs": [
     {
@@ -172,19 +163,18 @@
        "    '_source': {'information': '我爱father'}}]}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 查询内容与setting参数_同近义词过滤_搜索时指定analyzer_demo.ipynb相同\n",
     "es.search(index='es0', body={\n",
     "    \"query\": {\n",
     "        \"match\": {\n",
     "            \"information\": {\n",
-    "                \"query\": \"我爱我的母亲\",\n",
-    "                # 字段未指定search_analyzer时使用analyzer进行搜索(本例中为analyzer_index)\n",
-    "                \"analyzer\": \"analyzer_search\"  # ★★★★★仅为full_text_queries时可以指定该字段\n",
+    "                \"query\": \"我爱我的母亲\"\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -193,8 +183,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1ad203f0",
+   "execution_count": 8,
+   "id": "4509ae30",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +207,7 @@
        "    '_source': {'information': '小孩很可爱'}}]}}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,8 +217,7 @@
     "    \"query\": {\n",
     "        \"match\": {\n",
     "            \"information\": {\n",
-    "                \"query\": \"老虎很可爱\",\n",
-    "                \"analyzer\": \"analyzer_search\" \n",
+    "                \"query\": \"老虎很可爱\"\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -237,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "65b39e3e",
+   "execution_count": 9,
+   "id": "70a624a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'took': 2,\n",
+       "{'took': 1,\n",
        " 'timed_out': False,\n",
        " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
        " 'hits': {'total': {'value': 3, 'relation': 'eq'},\n",
@@ -266,7 +255,7 @@
        "    '_source': {'information': '蔬菜有利于健康'}}]}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,13 +265,108 @@
     "    \"query\": {\n",
     "        \"match\": {\n",
     "            \"information\": {\n",
-    "                \"query\": \"香蕉很好吃\",  # 香蕉被转换为水果(单向同义词),故水果很好吃_score更高\n",
-    "                \"analyzer\": \"analyzer_search\" \n",
+    "                \"query\": \"香蕉很好吃\"  # 香蕉被转换为水果(单向同义词),故水果很好吃_score更高\n",
     "            }\n",
     "        }\n",
     "    }\n",
     "})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5a9f7f3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'took': 0,\n",
+       " 'timed_out': False,\n",
+       " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
+       " 'hits': {'total': {'value': 1, 'relation': 'eq'},\n",
+       "  'max_score': 1.8499753,\n",
+       "  'hits': [{'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '0',\n",
+       "    '_score': 1.8499753,\n",
+       "    '_source': {'information': '我爱妈妈'}}]}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "es.search(index='es0', body=\n",
+    "{\n",
+    "    \"query\": {\n",
+    "        \"term\": {\n",
+    "            \"information\": {\n",
+    "                \"value\": \"妈妈\",\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7ae33579",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'took': 0,\n",
+       " 'timed_out': False,\n",
+       " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
+       " 'hits': {'total': {'value': 0, 'relation': 'eq'},\n",
+       "  'max_score': None,\n",
+       "  'hits': []}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# term-level_queries时analyzer仍使用该字段的analyzer进行搜索\n",
+    "es.search(index='es0', body=\n",
+    "{\n",
+    "    \"query\": {\n",
+    "        \"term\": {\n",
+    "            \"information\": {\n",
+    "                \"value\": \"母亲\"\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f96be929",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reloads an index’s search analyzers and their resource\n",
+    "# 参考:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/indices-reload-analyzers.html\n",
+    "# 参考:setting参数_同近义词过滤0.ipynb updateable字段\n",
+    "es.indices.reload_search_analyzers('es0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0458c5e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
