--- a/操作向量数据库milvus/a_Connect-to-a-Milvus-server.ipynb
+++ b/操作向量数据库milvus/a_Connect-to-a-Milvus-server.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "from pymilvus import connections\n",
@@ -21,6 +21,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-12-21T10:24:11.611565500Z",
+     "start_time": "2023-12-21T10:24:11.591466400Z"
     }
    }
   },
