--- a/操作分布式搜索和分析引擎Elasticsearch/索引/分词器2custom_ik.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/索引/分词器2custom_ik.ipynb
@@ -99,9 +99,9 @@
     "'''\n",
     "自定义词典\n",
     "\n",
-    "目录:???/elasticsearch/plugins/ik/config\n",
+    "目录:???/elasticsearch/config/analysis-ik\n",
     "\n",
-    "文件:ext.dic(编码:UTF-8)\n",
+    "文件:ext.dic(编码:UTF-8,IKAnalyzer.cfg.xml同目录下)\n",
     "屈光不正\n",
     "冠状动脉壁\n",
     "\n",
