painless参数进一步学习

--- a/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/compound_queries/function_score-参数script_score-script.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/compound_queries/function_score-参数script_score-script.ipynb
@@ -2,9 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:43:28.698933Z",
+     "start_time": "2024-04-30T09:43:28.690343Z"
+    },
     "collapsed": true,
+    "metadata": {},
     "pycharm": {
      "name": "#%%\n"
     }
@@ -16,13 +21,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:43:38.900974Z",
+     "start_time": "2024-04-30T09:43:28.699937Z"
+    },
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
+      "text/plain": [
+       "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
+      ]
      },
-     "execution_count": 77,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +52,12 @@
     "        \"properties\": {\n",
     "            \"name\": {\n",
     "                \"type\": \"text\",\n",
-    "                \"analyzer\": \"ik_max_word\"\n",
+    "                \"analyzer\": \"ik_max_word\",\n",
+    "                \"fields\": {\n",
+    "                    \"raw\": {\n",
+    "                        \"type\": \"keyword\"\n",
+    "                    }\n",
+    "                }\n",
     "            },\n",
     "            \"vote\": {\n",
     "                \"type\": \"long\",\n",
@@ -42,23 +65,33 @@
     "        }\n",
     "    }\n",
     "})"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '1',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 1,\n '_primary_term': 1}"
+      "text/plain": [
+       "{'_index': 'es0',\n",
+       " '_type': '_doc',\n",
+       " '_id': '1',\n",
+       " '_version': 1,\n",
+       " 'result': 'created',\n",
+       " '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n",
+       " '_seq_no': 1,\n",
+       " '_primary_term': 1}"
+      ]
      },
-     "execution_count": 78,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,16 +101,16 @@
     "                            \"vote\": 100})\n",
     "es.index('es0', id=1, body={\"name\": \"Java多线程详解,Java锁详解\",\n",
     "                            \"vote\": 30})"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "The newly computed score is combined with the score of the query. The parameter boost_mode defines how:\n",
     "\n",
@@ -88,31 +121,48 @@
     "| `avg`      | average                                                 |\n",
     "| `max`      | max of query score and function score                   |\n",
     "| `min`      | min of query score and function score                   |"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'took': 2,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 2, 'relation': 'eq'},\n  'max_score': 2.0009458,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 2.0009458,\n    '_source': {'name': 'Java集合详解', 'vote': 100}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '1',\n    '_score': 1.4803712,\n    '_source': {'name': 'Java多线程详解,Java锁详解', 'vote': 30}}]}}"
+      "text/plain": [
+       "{'took': 9,\n",
+       " 'timed_out': False,\n",
+       " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
+       " 'hits': {'total': {'value': 2, 'relation': 'eq'},\n",
+       "  'max_score': 100.0,\n",
+       "  'hits': [{'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '0',\n",
+       "    '_score': 100.0,\n",
+       "    '_source': {'name': 'Java集合详解', 'vote': 100}},\n",
+       "   {'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '1',\n",
+       "    '_score': 30.0,\n",
+       "    '_source': {'name': 'Java多线程详解,Java锁详解', 'vote': 30}}]}}"
+      ]
      },
-     "execution_count": 79,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# doc参考见:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/modules-scripting-expression.html\n",
     "body = {\n",
     "    \"query\": {\n",
+    "        # The function_score allows you to modify the score of documents that are retrieved by a query.\n",
     "        \"function_score\": {\n",
     "            \"query\": {\n",
     "                \"match\": {\n",
@@ -123,7 +173,12 @@
     "            },\n",
     "            \"script_score\": {\n",
     "                \"script\": {\n",
-    "                    \"source\": \"Math.log10(_score + doc['vote'].value)\"\n",
+    "                    \"source\": \"\"\"\n",
+    "                    String way1 = doc['name.raw'].value;\n",
+    "                    String way2 = params._source.name;\n",
+    "                    \n",
+    "                    return doc['vote'].value\n",
+    "                    \"\"\"\"\"\n",
     "                }\n",
     "            },\n",
     "            \"boost_mode\": \"replace\"\n",
@@ -135,23 +190,40 @@
     "`body`\n",
     "'''\n",
     "es.search(index='es0', body=body)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'took': 2,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 2, 'relation': 'eq'},\n  'max_score': 0.0047464985,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '1',\n    '_score': 0.0047464985,\n    '_source': {'name': 'Java多线程详解,Java锁详解', 'vote': 30}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 1.31609825e-08,\n    '_source': {'name': 'Java集合详解', 'vote': 100}}]}}"
+      "text/plain": [
+       "{'took': 8,\n",
+       " 'timed_out': False,\n",
+       " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
+       " 'hits': {'total': {'value': 2, 'relation': 'eq'},\n",
+       "  'max_score': 0.0047464985,\n",
+       "  'hits': [{'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '1',\n",
+       "    '_score': 0.0047464985,\n",
+       "    '_source': {'name': 'Java多线程详解,Java锁详解', 'vote': 30}},\n",
+       "   {'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '0',\n",
+       "    '_score': 1.31609825e-08,\n",
+       "    '_source': {'name': 'Java集合详解', 'vote': 100}}]}}"
+      ]
      },
-     "execution_count": 80,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,48 +253,33 @@
     "    }\n",
     "}\n",
     "          )"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'acknowledged': True}"
+      "text/plain": [
+       "{'acknowledged': True}"
+      ]
      },
-     "execution_count": 81,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "es.indices.delete('es0')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
@@ -234,14 +291,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
