--- a/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/compound_queries/bool1.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/compound_queries/bool1.ipynb
@@ -19,10 +19,18 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
+      "text/plain": [
+       "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
+      ]
      },
      "execution_count": 44,
      "metadata": {},
@@ -31,21 +39,30 @@
    ],
    "source": [
     "es.indices.create('es0')"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '1',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 1,\n '_primary_term': 1}"
+      "text/plain": [
+       "{'_index': 'es0',\n",
+       " '_type': '_doc',\n",
+       " '_id': '1',\n",
+       " '_version': 1,\n",
+       " 'result': 'created',\n",
+       " '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n",
+       " '_seq_no': 1,\n",
+       " '_primary_term': 1}"
+      ]
      },
      "execution_count": 45,
      "metadata": {},
@@ -55,21 +72,37 @@
    "source": [
     "es.index(index='es0', id=0, body={\"title\": \"Apple iPad\", \"content\": \"Apple iPad,Apple ipad\"})\n",
     "es.index(index='es0', id=1, body={\"title\": \"Apple iPad,Apple ipad\", \"content\": \"Apple iPad\"})"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'took': 1,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 2, 'relation': 'eq'},\n  'max_score': 0.8806269,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 0.8806269,\n    '_source': {'title': 'Apple iPad', 'content': 'Apple iPad,Apple ipad'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '1',\n    '_score': 0.8806269,\n    '_source': {'title': 'Apple iPad,Apple ipad', 'content': 'Apple iPad'}}]}}"
+      "text/plain": [
+       "{'took': 1,\n",
+       " 'timed_out': False,\n",
+       " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
+       " 'hits': {'total': {'value': 2, 'relation': 'eq'},\n",
+       "  'max_score': 0.8806269,\n",
+       "  'hits': [{'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '0',\n",
+       "    '_score': 0.8806269,\n",
+       "    '_source': {'title': 'Apple iPad', 'content': 'Apple iPad,Apple ipad'}},\n",
+       "   {'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '1',\n",
+       "    '_score': 0.8806269,\n",
+       "    '_source': {'title': 'Apple iPad,Apple ipad', 'content': 'Apple iPad'}}]}}"
+      ]
      },
      "execution_count": 46,
      "metadata": {},
@@ -88,33 +121,49 @@
     "                                \"query\": \"apple,ipad\",\n",
     "                            }\n",
     "                    }\n",
-    "                },\n",
+    "                 },\n",
     "                {\"match\":\n",
     "                    {\"content\":\n",
     "                        {\n",
     "                            \"query\": \"apple,ipad\",\n",
     "                        }\n",
-    "                    }\n",
-    "                }\n",
+    "                     }\n",
+    "                 }\n",
     "            ]\n",
     "        }\n",
     "    }\n",
     "})"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'took': 1,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 2, 'relation': 'eq'},\n  'max_score': 2.2558527,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 2.2558527,\n    '_source': {'title': 'Apple iPad', 'content': 'Apple iPad,Apple ipad'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '1',\n    '_score': 2.1472821,\n    '_source': {'title': 'Apple iPad,Apple ipad', 'content': 'Apple iPad'}}]}}"
+      "text/plain": [
+       "{'took': 1,\n",
+       " 'timed_out': False,\n",
+       " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
+       " 'hits': {'total': {'value': 2, 'relation': 'eq'},\n",
+       "  'max_score': 2.2558527,\n",
+       "  'hits': [{'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '0',\n",
+       "    '_score': 2.2558527,\n",
+       "    '_source': {'title': 'Apple iPad', 'content': 'Apple iPad,Apple ipad'}},\n",
+       "   {'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '1',\n",
+       "    '_score': 2.1472821,\n",
+       "    '_source': {'title': 'Apple iPad,Apple ipad', 'content': 'Apple iPad'}}]}}"
+      ]
      },
      "execution_count": 47,
      "metadata": {},
@@ -133,7 +182,7 @@
     "                                \"query\": \"apple,ipad\",\n",
     "                            }\n",
     "                    }\n",
-    "                },\n",
+    "                 },\n",
     "                {\"match\":\n",
     "                    {\"content\":\n",
     "                        {\n",
@@ -141,27 +190,29 @@
     "                            # 指定boost调整查询语句的相对的权重(boost>1:提升查询语句的相对分数;降低查询语句的相对分数:0<boost<1)\n",
     "                            \"boost\": 4\n",
     "                        }\n",
-    "                    }\n",
-    "                }\n",
+    "                     }\n",
+    "                 }\n",
     "            ]\n",
     "        }\n",
     "    }\n",
     "})"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'acknowledged': True}"
+      "text/plain": [
+       "{'acknowledged': True}"
+      ]
      },
      "execution_count": 42,
      "metadata": {},
@@ -170,25 +221,19 @@
    ],
    "source": [
     "es.indices.delete('es0')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
