--- a/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/compound_queries/boosting.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/compound_queries/boosting.ipynb
@@ -2,9 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "metadata": {}
    },
    "outputs": [],
    "source": [
@@ -13,13 +14,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
+      "text/plain": [
+       "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
+      ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,23 +37,33 @@
    "source": [
     "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])\n",
     "es.indices.create('es0')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '2',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 2,\n '_primary_term': 1}"
+      "text/plain": [
+       "{'_index': 'es0',\n",
+       " '_type': '_doc',\n",
+       " '_id': '2',\n",
+       " '_version': 1,\n",
+       " 'result': 'created',\n",
+       " '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n",
+       " '_seq_no': 2,\n",
+       " '_primary_term': 1}"
+      ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,29 +73,46 @@
     "es.index('es0', id=0, body={\"content\": \"Apple Mac\"})\n",
     "es.index('es0', id=1, body={\"content\": \"Apple iPad\"})\n",
     "es.index('es0', id=2, body={\"content\": \"Apple employee like Apple Pie and Apple juice\"})"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'took': 1,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 2, 'relation': 'eq'},\n  'max_score': 0.16786805,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 0.16786805,\n    '_source': {'content': 'Apple Mac'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '1',\n    '_score': 0.16786805,\n    '_source': {'content': 'Apple iPad'}}]}}"
+      "text/plain": [
+       "{'took': 0,\n",
+       " 'timed_out': False,\n",
+       " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
+       " 'hits': {'total': {'value': 2, 'relation': 'eq'},\n",
+       "  'max_score': 0.16786805,\n",
+       "  'hits': [{'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '0',\n",
+       "    '_score': 0.16786805,\n",
+       "    '_source': {'content': 'Apple Mac'}},\n",
+       "   {'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '1',\n",
+       "    '_score': 0.16786805,\n",
+       "    '_source': {'content': 'Apple iPad'}}]}}"
+      ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 方法一:\n",
+    "# 方式一:\n",
     "es.search(index='es0', body={\n",
     "    \"query\": {\n",
     "        \"bool\": {\n",
@@ -103,23 +140,45 @@
     "        }\n",
     "    }\n",
     "})"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'took': 1,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 3, 'relation': 'eq'},\n  'max_score': 0.16786805,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 0.16786805,\n    '_source': {'content': 'Apple Mac'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '1',\n    '_score': 0.16786805,\n    '_source': {'content': 'Apple iPad'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '2',\n    '_score': 0.086402655,\n    '_source': {'content': 'Apple employee like Apple Pie and Apple juice'}}]}}"
+      "text/plain": [
+       "{'took': 0,\n",
+       " 'timed_out': False,\n",
+       " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
+       " 'hits': {'total': {'value': 3, 'relation': 'eq'},\n",
+       "  'max_score': 0.17280531,\n",
+       "  'hits': [{'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '2',\n",
+       "    '_score': 0.17280531,\n",
+       "    '_source': {'content': 'Apple employee like Apple Pie and Apple juice'}},\n",
+       "   {'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '0',\n",
+       "    '_score': 0.16786805,\n",
+       "    '_source': {'content': 'Apple Mac'}},\n",
+       "   {'_index': 'es0',\n",
+       "    '_type': '_doc',\n",
+       "    '_id': '1',\n",
+       "    '_score': 0.16786805,\n",
+       "    '_source': {'content': 'Apple iPad'}}]}}"
+      ]
      },
-     "execution_count": 41,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,13 +186,20 @@
    "source": [
     "body = {\"query\": {\n",
     "    \"boosting\": {\n",
-    "        \"positive\": {\n",
-    "            \"match\": {\n",
-    "                \"content\": {\n",
-    "                    \"query\": \"apple\"\n",
+    "        # 单一查询条件({查询条件})\n",
+    "        # \n",
+    "        # 多组查询条件([{查询条件1}, {查询条件2}, ...])\n",
+    "        # positive: 所有列出的查询条件都必须匹配\n",
+    "        # negative: 所有列出的查询条件都必须匹配\n",
+    "        \"positive\": [\n",
+    "            {\n",
+    "                \"match\": {\n",
+    "                    \"content\": {\n",
+    "                        \"query\": \"apple\"\n",
+    "                    }\n",
     "                }\n",
     "            }\n",
-    "        },\n",
+    "        ],\n",
     "        \"negative\": {\n",
     "            \"match\": {\n",
     "                \"content\": {\n",
@@ -147,54 +213,40 @@
     "    }\n",
     "}\n",
     "}\n",
+    "\n",
     "# 方法二:\n",
     "'''\n",
     "GET es0/_search\n",
     "`body`\n",
     "'''\n",
     "es.search(index='es0', body=body)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'acknowledged': True}"
+      "text/plain": [
+       "{'acknowledged': True}"
+      ]
      },
-     "execution_count": 42,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "es.indices.delete('es0')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
@@ -206,14 +258,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
