--- a/操作分布式搜索和分析引擎Elasticsearch/data/example_book_write_script.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/data/example_book_write_script.ipynb
@@ -3,40 +3,49 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from elasticsearch import helpers\n",
     "from elasticsearch import Elasticsearch\n",
     "import jsonlines"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [],
-   "source": [
-    "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'test'}"
+      "text/plain": [
+       "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'test'}"
+      ]
      },
      "execution_count": 3,
      "metadata": {},
@@ -76,21 +85,24 @@
     "        }\n",
     "    }\n",
     "})"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "(888, [])"
+      "text/plain": [
+       "(888, [])"
+      ]
      },
      "execution_count": 4,
      "metadata": {},
@@ -111,39 +123,33 @@
     "\n",
     "\n",
     "helpers.bulk(es, gendata())"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   },
    "outputs": [],
    "source": [
     "# es.indices.delete('test')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [],
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -155,14 +161,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
