--- a/操作分布式搜索和分析引擎Elasticsearch/painless脚本/脚本参数.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/painless脚本/脚本参数.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "metadata": {}
    },
    "outputs": [],
    "source": [
@@ -14,24 +15,34 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [],
-   "source": [
-    "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])"
-   ],
    "metadata": {
     "collapsed": false,
+    "metadata": {},
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "metadata": {},
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'result': '0.5'}"
+      "text/plain": [
+       "{'result': '0.5'}"
+      ]
      },
      "execution_count": 3,
      "metadata": {},
@@ -54,16 +65,47 @@
     "            \"total\": exp(a)\n",
     "        }\n",
     "    }\n",
-    "})\n",
-    "\n",
-    "\n"
-   ],
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'result': '{a=0.5, b=1.5, c=2.5}'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   }
+   ],
+   "source": [
+    "weight_adjust = {\n",
+    "    \"a\": 0.5,\n",
+    "    \"b\": 1.5,\n",
+    "    \"c\": 2.5\n",
+    "}\n",
+    "\n",
+    "es.scripts_painless_execute(body={\n",
+    "    \"script\": {\n",
+    "        \"source\": \n",
+    "        \"\"\"\n",
+    "        Map weight = params.weight_adjust;\n",
+    "        return weight;\n",
+    "        \"\"\",\n",
+    "        \"params\": {\n",
+    "            \"weight_adjust\": weight_adjust\n",
+    "        }\n",
+    "    }\n",
+    "})"
+   ]
   }
  ],
  "metadata": {
@@ -75,14 +117,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
